tests/baselines/reference/parserEnumDeclaration4.errors.txt
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4.ts(1,6): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4.ts(1,6): error TS2431: Enum name cannot be 'void'.


==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4.ts (2 errors) ====
    enum void {
         ~~~~
!!! error TS1003: Identifier expected.
         ~~~~
!!! error TS2431: Enum name cannot be 'void'.
    }